# graylog-alerts-to-icinga

./: README.md  check_graylog_alerts.py  check_graylog_alerts.py~  pyproject.toml
